{
    "name": "MovePjTpController",
    "maps": [
        {
            "name": "Move",
            "id": "bcc9c669-5f1b-4906-a160-598f8fd144bb",
            "actions": [
                {
                    "name": "MoveCamera",
                    "type": "Value",
                    "id": "ec1fd917-5057-4c67-a291-6b6f8d5ff450",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MovePj",
                    "type": "Value",
                    "id": "5466fb31-8cb4-4388-a39d-3dbc91e4e447",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "1916bf18-2130-45e1-bd94-f1f059f599b7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5fbaaf36-a76d-4526-a2cc-b31dc216129a",
                    "path": "<Mouse>/delta/y",
                    "interactions": "",
                    "processors": "Invert",
                    "groups": "",
                    "action": "MoveCamera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "83ad820a-e737-4c98-b2f7-42f6a13d1a41",
                    "path": "<Mouse>/delta/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovePj",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "78023c23-9df8-466d-b4a0-eca3a27e53b4",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}